--- a/sass/Pages/Home.scss
+++ b/sass/Pages/Home.scss
@@ -26,7 +26,7 @@ body {
 .container {
   display: grid;
 
-  grid-template-rows:min-content 80vh min-content min-content repeat(3, min-content);
+  grid-template-rows:min-content 60vh min-content min-content repeat(3, min-content) min-content min-content;
   grid-template-columns:
     [full-start] minmax(10rem, 20rem)
     [center-start] repeat(8, [col-start] minmax(min-content, 1fr) [col-end])
@@ -67,9 +67,8 @@ body {
 
   grid-template-columns: min-content 1fr;
 
-  // background-color: blue;
 
-    padding: 2rem;
+  padding: 2rem;
 
   &__logo {
     background-color: yellow;
@@ -151,6 +150,9 @@ body {
 
   justify-items: center;
 
+
+
+
   padding: 5rem;
 
   // padding-top: 5rem;
@@ -215,7 +217,7 @@ body {
   display: grid;
 
   grid-template-rows: 1fr 1fr 1fr;
-
+  
   grid-row-gap: 1rem;
 
   @media only screen and (max-width: $bp-medium) {
